--- a/pages/tel/tel.wxml
+++ b/pages/tel/tel.wxml
@@ -2,60 +2,26 @@
   <view class="page__bd">
     <view class="weui-cells__title">我有事要联系老师：</view>
     <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" catchtap='callWusi'>
+      <view wx:for="{{telNumber}}" wx:key="telList" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__hd">
           <image src="/images/icon3.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
         </view>
-        <view class="weui-cell__bd">吴思</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access">15922164710</view>
-      </view>
-      <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" catchtap='callYangcan'>
-        <view class="weui-cell__hd">
-          <image src="/images/icon3.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-        </view>
-        <view class="weui-cell__bd">杨灿</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access">18630801799</view>
-      </view>
-      <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" catchtap='callLiuweijie'>
-        <view class="weui-cell__hd">
-          <image src="/images/icon3.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-        </view>
-        <view class="weui-cell__bd">刘卫洁</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access">18722136008</view>
+        <view class="weui-cell__bd">{{item.name}}</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access" id='{{item.tel}}' catchtap='callPhone' catchlongpress="copyIt">{{item.tel}}</view>
       </view>
       <view class="weui-cells__title">QQ：</view>
-      <view class="weui-cells weui-cells_after-title">
+      <view wx:for="{{QQNumber}}" wx:key="QQList" class="weui-cells weui-cells_after-title">
         <view class="weui-cell">
           <view class="weui-cell__hd">
             <image src="/images/qq.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
           </view>
-          <view class="weui-cell__bd">吴思</view>
-          <view class="weui-cell__ft">925396533</view>
-        </view>
-        <view class="weui-cell">
-          <view class="weui-cell__hd">
-            <image src="/images/qq.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-          </view>
-          <view class="weui-cell__bd">鲍勇</view>
-          <view class="weui-cell__ft">778547694</view>
-        </view>
-        <view class="weui-cell">
-          <view class="weui-cell__hd">
-            <image src="/images/qq.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-          </view>
-          <view class="weui-cell__bd">张艳君</view>
-          <view class="weui-cell__ft">911615726</view>
-        </view>
-        <view class="weui-cell">
-          <view class="weui-cell__hd">
-            <image src="/images/qq.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-          </view>
-          <view class="weui-cell__bd">刘卫洁</view>
-          <view class="weui-cell__ft">315226353</view>
+          <view class="weui-cell__bd">{{item.name}}</view>
+          <view class="weui-cell__ft" id='{{item.qq}}' catchtap='copyIt'>{{item.qq}}</view>
         </view>
       </view>
     </view>
   </view>
+  <view class="weui-cells__tips">长按可以快速复制到粘贴版☺</view>
   <view class="weui-footer weui-footer_fixed-bottom">
     <view class="weui-footer__links">
       <navigator url="" class="weui-footer__link">Airmole.</navigator>
