细节代码、视觉、用户体验优化
1.课表查询页面增加分享按钮以及转发选项功能（转发按钮的图标大小以及位置调整了半天...）；
2.校历页面添加下拉刷新动画，上拉到底Tip提醒；
3.教务没开，所以成绩查询暂时还不用写😄
4.通讯录暂无更多数据来源可以添加，过两天试试客服接口，方便同学们补充更多信息（不过好像貌似继续用表单提交更好一点...）
今天就先这样了，注释掉成绩查询部分，然后发布出去吧。

--- a/pages/calendar/calendar.wxml
+++ b/pages/calendar/calendar.wxml
@@ -1,5 +1,6 @@
 <view>
-  <view class='calendarStyle'>
+  <view class='setCenter'>
     <image src='http://www.z4a.net/images/2018/02/08/17-18IIcalendar.jpg' mode='widthFix'></image>
   </view>
+  <view class="weui-cells__tips setCenter">{{BottomTip}}</view>
 </view>
