--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,11 +1,20 @@
 @import "../common/weui.wxss";
+
 .picker {
   padding: 19rpx 26rpx;
   background-color: #fff;
 }
-.kbPic{
+
+.kbPic {
   text-align: center;
 }
-page{
+
+.shareIcon {
+  margin-top: 10px;
+  width: 26px;
+  height: 26px;
+}
+
+page {
   background-color: rgb(248, 247, 245);
 }
