--- a/pages/tel/tel.wxml
+++ b/pages/tel/tel.wxml
@@ -16,7 +16,7 @@
             <image src="/images/qq.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
           </view>
           <view class="weui-cell__bd">{{item.name}}</view>
-          <view class="weui-cell__ft" id='{{item.qq}}' catchtap='copyIt'>{{item.qq}}</view>
+          <view class="weui-cell__ft" id='{{item.qq}}' catchlongpress='copyIt'>{{item.qq}}</view>
         </view>
       </view>
     </view>
