提交上线的0.99beta1版本代码
暂时隐藏掉了查询成绩的tab入口选项卡

--- a/pages/calendar/calendar.wxss
+++ b/pages/calendar/calendar.wxss
@@ -1,5 +1,16 @@
 /* pages/calendar/calendar.wxss */
 @import "../common/weui.wxss";
-.setCenter{
+
+.setCenter {
   text-align: center;
+}
+
+.shareIcon {
+  margin-top: 10px;
+  width: 26px;
+  height: 26px;
+}
+
+.hide {
+  display: none;
 }
