--- a/pages/calendar/calendar.wxml
+++ b/pages/calendar/calendar.wxml
@@ -1,6 +1,12 @@
-<view>
+<view class='page'>
   <view class='setCenter'>
     <image src='http://www.z4a.net/images/2018/02/08/17-18IIcalendar.jpg' mode='widthFix'></image>
   </view>
   <view class="weui-cells__tips setCenter">{{BottomTip}}</view>
+  <view class="weui-btn-area" wx:if="{{index!=9}}">
+    <button plain='true' open-type="share" type="default" hover-class="other-button-hover">
+      <image class="weui-btn shareIcon" src='/images/share.png'></image>
+      分享校历给朋友
+    </button>
+  </view>
 </view>
