--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -47,9 +47,9 @@
     <image src='/images/tip.jpg'></image>
   </view>
   <view class="weui-btn-area" wx:if="{{index!=9}}">
-    <button class="shareButton" plain='true' open-type="share" type="default" hover-class="other-button-hover">
+    <button plain='true' open-type="share" type="default" hover-class="other-button-hover">
       <image class="weui-btn shareIcon" src='/images/share.png'></image>
-      分享课表给朋友
+      <text>分享课表给朋友</text>
     </button>
   </view>
 </view>
