--- a/pages/tel/tel.wxml
+++ b/pages/tel/tel.wxml
@@ -1,5 +1,14 @@
 <view class="page">
   <view class="page__bd">
+    <view class="weui-cells weui-cells_after-title">
+      <navigator url="/pages/tel/departmentTel" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__hd">
+          <image src="/images/department.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+        </view>
+        <view class="weui-cell__bd">学校各系部联系电话</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+      </navigator>
+    </view>
     <view class="weui-cells__title">我有事要联系老师：</view>
     <view class="weui-cells weui-cells_after-title">
       <view wx:for="{{telNumber}}" wx:key="telList" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
@@ -28,6 +37,6 @@
       <navigator url="" class="weui-footer__link">Airmole.</navigator>
       <navigator url="" class="weui-footer__link">欢迎补充更多...</navigator>
     </view>
-    <view class="weui-footer__text">Copyright © 2018 Airmole Cheung</view>
+    <view class="weui-footer__text">Copyright © 2018 Airmole Cheung.</view>
   </view>
 </view>
