--- a/pages/tel/tel.wxml
+++ b/pages/tel/tel.wxml
@@ -1,3 +1,5 @@
+<!--pages/tel/tel.wxml-->
+<!-- 学校信息系老师联系电话页面 -->
 <view class="page">
   <view class="page__bd">
     <view class="weui-cells weui-cells_after-title">
