--- a/pages/score/showScore/showScore.wxml
+++ b/pages/score/showScore/showScore.wxml
@@ -1,16 +1,19 @@
 <!--pages/score/showScore/showScore.wxml-->
 <view class="page">
   <view class="page__hd">
-    <view class="page__title">List</view>
-    <view class="page__desc">列表</view>
+    <view class="page__title">加权平均分：</view>
+    <view class="page__desc">本程序加权平均分计算方法仅供参考，最终准确加权平均分请以导员计算为准</view>
   </view>
   <view class="page__bd">
-    <view class="weui-cells__title">带说明的列表项</view>
+    <view class="weui-cells__title">您的各科成绩</view>
     <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell">
-        <view class="weui-cell__bd">标题文字</view>
-        <view class="weui-cell__ft">说明文字</view>
+        <view class="weui-cell__bd">自动化导论
+          <view class="weui-media-box__desc">学分:2 [公选]</view>
+        </view>
+        <view class="weui-cell__ft">♕90</view>
       </view>
+      
     </view>
   </view>
 </view>
