--- a/pages/score/showScore/showScore.wxml
+++ b/pages/score/showScore/showScore.wxml
@@ -8,12 +8,13 @@
     <view class="weui-cells__title">您的各科成绩</view>
     <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell">
-        <view class="weui-cell__bd">自动化导论
-          <view class="weui-media-box__desc">学分:2 [公选]</view>
+        <view class="weui-cell__bd">
+          <view style="display: inline-block; vertical-align: middle">自动化导论</view>
+          <view style="margin-left: 5px;">学分:1 [必修]</view>
         </view>
         <view class="weui-cell__ft">♕90</view>
       </view>
-      
+
     </view>
   </view>
 </view>
