已筹划功能所有页面实现完成
至此，1.0版本筹划的所有功能的页面全部完成，并在成绩查询和通讯录页面添加了页头标题，界面看起来更加美观了。接下来做成绩查询的API调用和数据处理以及数据绑定展示

--- a/app.wxss
+++ b/app.wxss
@@ -1,5 +1,5 @@
 /**app.wxss**/
-@import '/pages/common/weui.wxss';
+@import "/pages/common/weui.wxss";
 
 .container {
   height: 100%;
@@ -18,11 +18,11 @@ page {
 }
 
 .page__hd {
-  padding: 20px;
+  padding: 40px;
 }
 
 .page__bd {
-  padding-bottom: 20px;
+  padding-bottom: 40px;
 }
 
 .page__bd_spacing {
