--- a/pages/score/showScore/showScore.wxml
+++ b/pages/score/showScore/showScore.wxml
@@ -1,20 +1,25 @@
 <!--pages/score/showScore/showScore.wxml-->
 <view class="page">
   <view class="page__hd">
-    <view class="page__title">加权平均分：</view>
+    <view class="page__title">加权平均分：79.99</view>
     <view class="page__desc">本程序加权平均分计算方法仅供参考，最终准确加权平均分请以导员计算为准</view>
   </view>
   <view class="page__bd">
-    <view class="weui-cells__title">您的各科成绩</view>
+    <view class="weui-cells__title">您的各科成绩：</view>
     <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell">
-        <view class="weui-cell__bd">
-          <view style="display: inline-block; vertical-align: middle">自动化导论</view>
-          <view style="margin-left: 5px;">学分:1 [必修]</view>
+        <view class="weui-cell__bd">自动化导论
+          <span class="page__desc">学分:2 [公选]</span>
         </view>
-        <view class="weui-cell__ft">♕90</view>
+        <view class="weui-cell__ft" style='color:#000000;'>♕90</view>
       </view>
-
     </view>
+  </view>
+  <view class="weui-footer">
+    <view class="weui-footer__links">
+      <navigator url="" class="weui-footer__link">很奔放</navigator>
+      <navigator url="" class="weui-footer__link">Airmole.</navigator>
+    </view>
+    <view class="weui-footer__text">Copyright © 2017-2018 Airmole BKIEBox.</view>
   </view>
 </view>
