成绩查询成功与否验证
添加了成绩查询是否成功的验证，查询失败跳转到错误提示页面。查询成功可分享。明天实现成绩分数分享功能，以及添加成绩查询的分享卡片图。今晚就酱，碎觉！

--- a/app.wxss
+++ b/app.wxss
@@ -1,5 +1,14 @@
 /**app.wxss**/
 @import "/pages/common/weui.wxss";
+.setCenter {
+  text-align: center;
+}
+
+.shareIcon {
+  width: 26px;
+  height: 26px;
+  vertical-align: text-bottom;
+}
 
 .container {
   height: 100%;
