--- a/pages/calendar/calendar.wxss
+++ b/pages/calendar/calendar.wxss
@@ -10,3 +10,11 @@
   height: 26px;
   vertical-align: text-bottom;
 }
+.button-sp-area{
+    margin: 0 auto;
+    padding-top: 15px;
+    width: 60%;
+}
+.mini-btn{
+    margin-right: 5px;
+}
