--- a/pages/score/showScore/showScore.wxml
+++ b/pages/score/showScore/showScore.wxml
@@ -14,6 +14,12 @@
         <view class="weui-cell__ft" style='color:#000000;'>{{item.score}}</view>
       </view>
     </view>
+    <view wx:if="{{jsonContent[0].length>0}}" class="weui-btn-area">
+    <button plain='true' open-type="share" type="default" hover-class="other-button-hover">
+      <image class="weui-btn shareIcon" src='/images/share.png'></image>
+      分享我的成绩给朋友
+    </button>
+  </view>
   </view>
   <view class="weui-footer">
     <view class="weui-footer__links">
