--- a/pages/tel/tel.wxml
+++ b/pages/tel/tel.wxml
@@ -19,7 +19,7 @@
     <view class="weui-cells weui-cells_after-title">
       <view wx:for="{{telNumber}}" wx:key="telList" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__hd">
-          <image src="/images/icon3.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+          <image src="/images/call.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
         </view>
         <view class="weui-cell__bd">{{item.name}}</view>
         <view class="weui-cell__ft weui-cell__ft_in-access" id='{{item.tel}}' catchtap='callPhone' catchlongpress="copyIt">{{item.tel}}</view>
