--- a/pages/score/showScore/showScore.wxml
+++ b/pages/score/showScore/showScore.wxml
@@ -23,8 +23,8 @@
   </view>
   <view class="weui-footer">
     <view class="weui-footer__links">
-      <navigator url="" class="weui-footer__link">很奔放</navigator>
-      <navigator url="" class="weui-footer__link">Airmole.</navigator>
+      <text  class="weui-footer__link">很奔放</text>
+      <text class="weui-footer__link">Airmole.</text>
     </view>
     <view class="weui-footer__text">Copyright © 2017-2018 Airmole BKIEBox.</view>
   </view>
