--- a/pages/calendar/calendar.wxml
+++ b/pages/calendar/calendar.wxml
@@ -1,5 +1,7 @@
 <view class='page'>
   <view class='setCenter'>
+  <text>\n</text>
+    <view class="weui-article__h1">今天是：{{time}}</view>
     <image src='https://airmole.cn/wechat/wxapp/images/17-18IIcalendar.jpg' mode='widthFix'></image>
   </view>
   <view class="weui-cells__tips setCenter">{{BottomTip}}</view>
