通讯录号码分离为两块
将所有的电话号码分离为部门电话和老师电话两部分。下一步：查看老师电话需要输入自己的学号才能查看。

--- a/pages/tel/departmentTel/departmentTel.wxss
+++ b/pages/tel/departmentTel/departmentTel.wxss
@@ -1,5 +1,5 @@
 /* pages/tel/departmentTel.wxss */
-@import "../common/weui.wxss";
+@import "../../common/weui.wxss";
 .btnIcon {
   width: 26px;
   height: 26px;
