--- a/pages/tel/departmentTel/departmentTel.wxml
+++ b/pages/tel/departmentTel/departmentTel.wxml
@@ -1,14 +1,18 @@
 <!--pages/tel/departmentTel.wxml-->
 <!-- 学校各系部电话号码通讯录专页 -->
 <view class="page">
+  <view class="page__hd">
+    <view class="page__title">各系部联系电话</view>
+    <view class="page__desc">学校各系、各部门办公联系电话</view>
+  </view>
   <view class="page__bd">
     <view class="weui-cells weui-cells_after-title">
-      <view wx:for="{{telNumber}}" wx:key="telList" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <view wx:for="{{telNumber}}" wx:key="telList" class="weui-cell weui-cell_access" hover-class="weui-cell_active" catchtap='callPhone' catchlongpress="copyIt">
         <view class="weui-cell__hd">
           <image src="/images/tel.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
         </view>
         <view class="weui-cell__bd">{{item.name}}</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access" id='{{item.tel}}' catchtap='callPhone' catchlongpress="copyIt">{{item.tel}}</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access" id='{{item.tel}}'>{{item.tel}}</view>
       </view>
     </view>
     <view class="weui-cells__tips">外地用户请加拨天津长途区号 022</view>
