--- a/pages/tel/tel.wxml
+++ b/pages/tel/tel.wxml
@@ -6,8 +6,9 @@
     <view class="page__desc">查询学校老师及学校各系部办公电话</view>
   </view>
   <view class="page__bd">
+    <view class="weui-cells__title">我要找学校相关部门：</view>
     <view class="weui-cells weui-cells_after-title">
-      <navigator url="/pages/tel/departmentTel" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <navigator url="/pages/tel/departmentTel/departmentTel" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__hd">
           <image src="/images/department.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
         </view>
@@ -17,25 +18,14 @@
     </view>
     <view class="weui-cells__title">我有事要联系老师：</view>
     <view class="weui-cells weui-cells_after-title">
-      <view wx:for="{{telNumber}}" wx:key="telList" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <navigator url="/pages/tel/teacherTel/teacherTel" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__hd">
-          <image src="/images/call.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+          <image src="/images/teacher.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
         </view>
-        <view class="weui-cell__bd">{{item.name}}</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access" id='{{item.tel}}' catchtap='callPhone' catchlongpress="copyIt">{{item.tel}}</view>
-      </view>
-      <view class="weui-cells__title">QQ：</view>
-      <view wx:for="{{QQNumber}}" wx:key="QQList" class="weui-cells weui-cells_after-title">
-        <view class="weui-cell">
-          <view class="weui-cell__hd">
-            <image src="/images/qq.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-          </view>
-          <view class="weui-cell__bd">{{item.name}}</view>
-          <view class="weui-cell__ft" id='{{item.qq}}' catchlongpress='copyIt'>{{item.qq}}</view>
-        </view>
-      </view>
+        <view class="weui-cell__bd">学校各老师联系电话</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+      </navigator>
     </view>
-    <view class="weui-cells__tips">点击电话号码直接拨打，长按复制到粘贴版☺</view>
   </view>
   <view class="weui-footer">
     <view class="weui-footer__links">
