小程序要大改版一下
哈哈哈，信实盒子要开始为贝壳盒子做准备了。界面结构，页面设计大改版。。即将迎来2.0版本的节啦

--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -1,6 +1,3 @@
-<view class='container'>
-  <image class="avatar" src="/images/BKIELogo.png"></image>
-  <view class='journey-container' catchtap='onTapJump'>
-    <text>开启小程序之旅</text>
-  </view>
-</view>
+<!--pages/welcome/welcome.wxml-->
+<text>pages/welcome/welcome.wxml</text>
+睡觉，睡觉。。。明天写欢迎界面，顺便把学籍信息接口部署上去
