--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -1,11 +1,7 @@
 <!--pages/login/login.wxml-->
-<swiper class="swiper" indicator-dots="true" autoplay="true" interval="5000" duration="1000">
-  <block wx:for="{{swiperPic}}" wx:key="index">
-    <swiper-item>
-      <image src="{{item.url}}" class="slide-image" mode="aspectFill" />
-    </swiper-item>
-  </block>
-</swiper>
+<image class="logo" src="../../images/logo.png">
+</image>
+<view class="logo-sub">北京科技大学天津学院智慧校园</view>
 <view class="page">
   <view class="weui-cells__title">请先登录：</view>
   <form bindsubmit="submitInfo">
