睡觉，今晚这样已经不错了。明天继续努力
完成了，登录功能，并会返回学生信息。但是没做数据记录，也没做账号错误验证。明天继续努力。（尴尬，刚才把这段话放到那个仓库里了，这才是正确的应该出现的位置）谁！晚安

--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -14,21 +14,21 @@
         </block>
       </view>
       <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell">
+        <view wx:for="{{jsonStr[0]}}" wx:key="student" class="weui-cell">
           <view class="weui-cell__bd">姓名：</view>
-          <view class="weui-cell__ft">张三</view>
+          <view class="weui-cell__ft">{{item.stuName}}</view>
         </view>
       </view>
-      <view class="weui-cells weui-cells_after-title">
+      <view wx:for="{{jsonStr[0]}}" wx:key="student" class="weui-cells weui-cells_after-title">
         <view class="weui-cell">
           <view class="weui-cell__bd">学号：</view>
-          <view class="weui-cell__ft">165150304</view>
+          <view class="weui-cell__ft">{{item.stuID}}</view>
         </view>
       </view>
-      <view class="weui-cells weui-cells_after-title">
+      <view wx:for="{{jsonStr[0]}}" wx:key="student" class="weui-cells weui-cells_after-title">
         <view class="weui-cell">
           <view class="weui-cell__bd">班级：</view>
-          <view class="weui-cell__ft">计算机1602</view>
+          <view class="weui-cell__ft">{{item.stuClass}}</view>
         </view>
       </view>
     </view>
