--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -12,7 +12,7 @@
             <view class="weui-label">学号</view>
           </view>
           <view class="weui-cell__bd">
-            <input name="stuId" maxlength="9" type="number" class="weui-input" placeholder="请输入学号" />
+            <input name="uid" maxlength="9" type="number" class="weui-input" placeholder="请输入学号" />
           </view>
         </view>
         <view class="weui-cell weui-cell_input">
@@ -20,7 +20,7 @@
             <view class="weui-label">密码</view>
           </view>
           <view class="weui-cell__bd">
-            <input name="password" password type="text" class="weui-input" placeholder="请输入教务网密码" />
+            <input name="pwd" password type="text" class="weui-input" placeholder="请输入教务网密码" />
           </view>
         </view>
       </view>
