两个错误页面都改好了，基本差不多

--- a/pages/error/queryerror.wxml
+++ b/pages/error/queryerror.wxml
@@ -1,4 +1,3 @@
-<!--pages/score/showScore/error.wxml-->
 <view class="page">
   <view class="page__hd">
     <view class="page__title"></view>
@@ -7,16 +6,16 @@
     <view class="icon-box">
       <icon type="info" size="93"></icon>
       <view class="icon-box__ctn">
-        <view class="icon-box__title">没有查到您的成绩</view>
-        <view class="icon-box__desc">暂时无法查询到您的成绩，请确保学号密码正确。也有可能是教务系统关闭了外网访问通道😞</view>
+        <view class="icon-box__title">无法查询</view>
+        <view class="icon-box__desc">您的成绩暂时无法查询，您可能没有登录。也可能是教务系统关闭😞</view>
       </view>
     </view>
-    <button bindtap="goBack" class="weui-btn" type="primary">返回重试</button>
-    <button bindtap="goIndex" class="weui-btn" type="default">取消查询</button>
+    <button bindtap="goBack" class="weui-btn" type="default">登录重试</button>
+    <button bindtap="goIndex" class="weui-btn" type="primary">取消查询</button>
   </view>
   <view class="weui-footer weui-footer_fixed-bottom">
     <view class="weui-footer__links">
-      <navigator url="" class="weui-footer__link">很奔放</navigator>
+      <navigator url="" class="weui-footer__link">智慧校园</navigator>
       <navigator url="" class="weui-footer__link">Airmole.</navigator>
     </view>
     <view class="weui-footer__text">Copyright © 2017-2018 Airmole BKIEBox.</view>
