--- a/pages/stuInfo/stuInfo.wxml
+++ b/pages/stuInfo/stuInfo.wxml
@@ -1,41 +1,43 @@
 <!--pages/stuInfo/stuInfo.wxml-->
-<view class="weui-panel weui-panel_access">
-  <view class="weui-panel__hd">学籍信息</view>
-  <view class="weui-panel__bd">
-    <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-      <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-        <image class="weui-media-box__thumb" src="{{userInfo.avatarUrl}}" />
-      </view>
-      <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-        <view class="weui-media-box__title">张三丰</view>
-        <view class="weui-media-box__desc">学号：165180719</view>
-      </view>
-    </navigator>
+<view wx:for="{{jsonStr[0]}}" wx:key="stuinfoPage">
+  <view class="weui-panel weui-panel_access">
+    <view class="weui-panel__hd">学籍信息</view>
+    <view class="weui-panel__bd">
+      <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+        <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+          <image class="weui-media-box__thumb" src="{{userInfo.avatarUrl}}" />
+        </view>
+        <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+          <view class="weui-media-box__title">{{item.stuName}}</view>
+          <view class="weui-media-box__desc">学号：{{item.stuID}}</view>
+        </view>
+      </navigator>
+    </view>
   </view>
-</view>
-<view class="weui-cells weui-cells_after-title">
-  <view class="weui-cell">
-    <view class="weui-cell__bd">性别</view>
-    <view class="weui-cell__ft">男</view>
-  </view>
-  <view class="weui-cell">
-    <view class="weui-cell__bd">出生日期</view>
-    <view class="weui-cell__ft">19980522</view>
-  </view>
-  <view class="weui-cell">
-    <view class="weui-cell__bd">民族</view>
-    <view class="weui-cell__ft">汉族</view>
-  </view>
-  <view class="weui-cell">
-    <view class="weui-cell__bd">入学日期</view>
-    <view class="weui-cell__ft">2017年9月</view>
-  </view>
-  <view class="weui-cell">
-    <view class="weui-cell__bd">专业名称</view>
-    <view class="weui-cell__ft">计算机科学技术</view>
-  </view>
-  <view class="weui-cell">
-    <view class="weui-cell__bd">班级</view>
-    <view class="weui-cell__ft">计1605</view>
+  <view class="weui-cells weui-cells_after-title">
+    <view class="weui-cell">
+      <view class="weui-cell__bd">性别</view>
+      <view class="weui-cell__ft">{{item.stuSex}}</view>
+    </view>
+    <view class="weui-cell">
+      <view class="weui-cell__bd">出生日期</view>
+      <view class="weui-cell__ft">{{item.stuBirth}}</view>
+    </view>
+    <view class="weui-cell">
+      <view class="weui-cell__bd">民族</view>
+      <view class="weui-cell__ft">{{item.stuNation}}</view>
+    </view>
+    <view class="weui-cell">
+      <view class="weui-cell__bd">入学日期</view>
+      <view class="weui-cell__ft">{{item.stuEnterDate}}</view>
+    </view>
+    <view class="weui-cell">
+      <view class="weui-cell__bd">专业名称</view>
+      <view class="weui-cell__ft">{{item.stuMajor}}</view>
+    </view>
+    <view class="weui-cell">
+      <view class="weui-cell__bd">班级</view>
+      <view class="weui-cell__ft">{{item.stuClass}}</view>
+    </view>
   </view>
 </view>
