优化welcome页UI，去除教师联系方式
优化展示了welcome界面的List展示，去除了教师联系方式页面，毕竟涉及到了教师的个人信息

--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -1,5 +1,5 @@
 <!--pages/welcome/welcome.wxml-->
-<view class="page__bd">
+<view class="page__bd" wx:for="{{jsonStr[0]}}" wx:key="student">
   <view class="page-body">
     <view class="page-section">
       <view class="page-body-info">
@@ -13,23 +13,17 @@
           <text class="userinfo-nickname">{{userInfo.nickName}}</text>
         </block>
       </view>
-      <view class="weui-cells weui-cells_after-title">
-        <view wx:for="{{jsonStr[0]}}" wx:key="student" class="weui-cell">
-          <view class="weui-cell__bd">姓名：</view>
-          <view class="weui-cell__ft">{{item.stuName}}</view>
-        </view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">姓名：</view>
+        <view class="weui-cell__ft">{{item.stuName}}</view>
       </view>
-      <view wx:for="{{jsonStr[0]}}" wx:key="student" class="weui-cells weui-cells_after-title">
-        <view class="weui-cell">
-          <view class="weui-cell__bd">学号：</view>
-          <view class="weui-cell__ft">{{item.stuID}}</view>
-        </view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">学号：</view>
+        <view class="weui-cell__ft">{{item.stuID}}</view>
       </view>
-      <view wx:for="{{jsonStr[0]}}" wx:key="student" class="weui-cells weui-cells_after-title">
-        <view class="weui-cell">
-          <view class="weui-cell__bd">班级：</view>
-          <view class="weui-cell__ft">{{item.stuClass}}</view>
-        </view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">班级：</view>
+        <view class="weui-cell__ft">{{item.stuClass}}</view>
       </view>
     </view>
   </view>
