--- a/pages/common/weui.wxss
+++ b/pages/common/weui.wxss
@@ -702,7 +702,7 @@ icon {
   padding: .15em .4em;
   min-width: 8px;
   border-radius: 18px;
-  background-color: #F43530;
+  background-color: #4caf50;
   color: #FFFFFF;
   line-height: 1.2;
   text-align: center;
